# food-site

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
account/: models.py
account/migrations/: 0001_initial.py
base/templates/: index.html
root/: settings.py  urls.py
static/css/: normalize.css  style.css
static/js/: plugins.js  script.js
