[tool.poetry]
name = "foodshop"
version = "0.1.0"
description = ""
authors = ["NaiNaniNai <nail02-02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
celery = "^5.4.0"
environ = "^1.0"
psycopg2 = "^2.9.10"
redis = "^5.2.0"
django-environ = "^0.11.2"
pillow = "^11.0.0"
django-migration-linter = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
